--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,8 +1,15 @@
 // style.sass
 
-th
-  text-align: left
+body
+  padding: 5em 1.5em 1.5em
 
-.lineKey
-  font-weight: normal
-  font-size: 0.75rem
+.my-navbar
+  position: fixed
+  left: 0
+  top: 0
+  z-index: 999
+  width: 100%
+  border-radius: 0
+
+@import lines.sass
+
