--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,13 +3,11 @@
 body
   padding: 5em 1.5em 1.5em
 
-.my-navbar
-  position: fixed
-  left: 0
-  top: 0
-  z-index: 999
-  width: 100%
-  border-radius: 0
+.navbar-search-input
 
-@import lines.sass
+@media screen and (max-width: 767px)
+  .navbar-search-input
+    margin: 0.25em 0
+
+@import lists.sass
 
